@@ -168,6 +168,7 @@ class SemanticError
         DUPLICATE_CONSTRUCTOR,
         MISMATCHED_INHERITED_METHOD,
         MISMATCHED_IMPLICIT_METHOD,
+        UNIMPLEMENTABLE_INTERFACE,
         MISMATCHED_INHERITED_METHOD_EXTERNALLY,
         DUPLICATE_FORMAL_PARAMETER,
         MISSPELLED_CONSTRUCTOR_NAME,
@@ -473,6 +474,7 @@ private:
     static wchar_t *PrintDUPLICATE_CONSTRUCTOR(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintMISMATCHED_INHERITED_METHOD(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintMISMATCHED_IMPLICIT_METHOD(ErrorInfo &, LexStream *, Control &);
+    static wchar_t *PrintUNIMPLEMENTABLE_INTERFACE(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintMISMATCHED_INHERITED_METHOD_EXTERNALLY(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintDUPLICATE_FORMAL_PARAMETER(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintMISSPELLED_CONSTRUCTOR_NAME(ErrorInfo &, LexStream *, Control &);
